--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="/assets/vendor/jquery-2.0.3.min.js"></script>
     <script src="/assets/vendor/history.js/jquery.history.min.js"></script>
     <script src="/assets/js/routeur.js"></script>
+    <script src="/assets/js/routes.js"></script>
 
 </body>
 </html>
